# termux-elf-cleaner

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  README.md  android-elf-cleaner.cbp  android-elf-cleaner.cpp  arghandling.c  arghandling.h  configure.ac  cpucount.c  cpucount.h  elf-cleaner.cpp  elf.h  termux-elf-cleaner.cpp
.github/workflows/: attach_debug_apks_to_release.yml  attach_termux_elf_cleaner_to_release.yml  build.yml
tests/: Makefile.am  api-21.at  api-24.at  atlocal.in  curl-7.83.1-aarch64-api21-cleaned  curl-7.83.1-aarch64-api24-cleaned  curl-7.83.1-aarch64-original  curl-7.83.1-arm-api21-cleaned  curl-7.83.1-arm-api24-cleaned  curl-7.83.1-arm-original  curl-7.83.1-i686-api21-cleaned  curl-7.83.1-i686-api24-cleaned  curl-7.83.1-i686-original  curl-7.83.1-x86_64-api21-cleaned  curl-7.83.1-x86_64-api24-cleaned  curl-7.83.1-x86_64-original  elf-cleaner.at  test-dynamic-section.sh  test-threads.sh  test-tls-alignment.sh  test.sh  threads.at  tls-alignment.at  valgrind-3.19.0-arm-original  valgrind-3.19.0-arm-tls-aligned  valgrind-3.19.0-i686-original  valgrind-3.19.0-i686-tls-aligned  valgrind-3.19.0-x86_64-original  valgrind-3.19.0-x86_64-tls-aligned
